// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building choice source map should have source map data 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 20,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 9,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Choice",
  },
}
`;

exports[`when building choice with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 9, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building choice with lowercase choice name should have extraneous input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 9, line: 2, token: entity",
  "extraneous input 'entity' expecting ID, column: 9, line: 2, token: entity",
]
`;

exports[`when building choice with no choice name should have missing id error 1`] = `
Array [
  "missing ID at '[1]', column: 10, line: 2, token: [1]",
  "missing ID at '[1]', column: 10, line: 2, token: [1]",
]
`;

exports[`when building choice with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'integer' expecting 'documentation', column: 4, line: 3, token: integer",
  "mismatched input 'integer' expecting 'documentation', column: 4, line: 3, token: integer",
]
`;

exports[`when building choice with no property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 5, token: End Namespace",
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 5, token: End Namespace",
]
`;

exports[`when building duplicate choices should have validation failures for each entity: when building duplicate choices should have validation failures for each entity -> Choice 1 message 1`] = `"Choice named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate choices should have validation failures for each entity: when building duplicate choices should have validation failures for each entity -> Choice 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Choice",
}
`;

exports[`when building duplicate choices should have validation failures for each entity: when building duplicate choices should have validation failures for each entity -> Choice 2 message 1`] = `"Choice named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate choices should have validation failures for each entity: when building duplicate choices should have validation failures for each entity -> Choice 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Choice",
}
`;
